# aws-s3

./: .gitignore  Cargo.toml  README.md  build.gradle  eclipse.sh  main_s3.py  main_s3a.py  pyproject.toml
src/: main.rs  short.rs  shortest.rs
src/main/java/sco3/: PrefixLister.java
