[package]
name = "aws-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.1"
aws-sdk-s3 = {version="1.82.0",features = ["behavior-version-latest"]}
log = "0.4.27"
tokio = {version="1.44.2", features = ["full"]}

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "short"
path = "src/short.rs"

[[bin]]
name = "shortest"
path = "src/shortest.rs"

